Added progressive web app info to head

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A programming-themed task app designed to increase productivity.">
-    <link rel="stylesheet" href="styles.css">
-    <script src="app.js" defer></script>
+    <meta name="theme-color" content="rgb(198, 241, 198)">
+    <link href="./monitor.png" rel="icon" type="image/png">
+    <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="apple-touch-icon" href="./taskLogo.png">
+    <script src="./app.js" defer></script>
     <title>Programming Task App</title>
 </head>
 <body>
     <div id="container">
         <header id="header">
-            <h1 class="title">Programming Task App</h1>
-            <p class="subtitle">//Don't forget to...</p>
+            <img src="./taskLogo.png" width="80" height="80" alt="An old computer monitor with a black background and green text" class="header-image">
+            <div>
+                <h1 class="title">Programming Task App</h1>
+                <p class="subtitle">//Don't forget to...</p>
+            </div>
+            <img src="./taskLogo.png" width="80" height="80" alt="An old computer monitor with a black background and green text" class="header-image">
         </header>
         <main>
             <div id="task-forms-container">
