--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'none'; form-action 'self'; object-src 'none'; frame-src 'none'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A programming-themed task app designed to increase productivity.">
     <meta name="theme-color" content="rgb(198, 241, 198)">
     <link href="./monitor.png" rel="icon" type="image/png">
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="apple-touch-icon" href="./taskLogo.png">
+    <link rel="apple-touch-icon" href="Images/task-logo-small.png">
+    <link rel="apple-touch-icon" href="Images/task-logo-medium.png">
+    <link rel="apple-touch-icon" href="Images/task-logo-large.png">
     <script src="./app.js" defer></script>
     <title>Programming Task App</title>
 </head>
@@ -18,7 +21,7 @@
             <h1 class="title">Programming Task App</h1>
             <div id="logo-container">
                 <p class="subtitle">//Don't forget to...</p>
-                <img src="Images/task-logo-medium.png" width="96" height="96" alt="An old computer monitor with a black screen and green text, with a peice of notepad paper as the backgound" class="header-image">
+                <img src="Images/task-logo-small.png" width="96" height="96" alt="An old computer monitor with a black screen and green text, with a peice of notepad paper as the backgound" class="header-image">
             </div>
         </header>
         <main>
@@ -53,7 +56,7 @@
                         <label for="reminder-interval" class="block vertical-margin-small">Interval (in minutes) of timed reminders</label>
                         <input type="number" id="reminder-interval" min="1" max="60" class="block vertical-margin-small">
                         <button id="add-reminders-btn" type="submit">Add Reminder</button>
-                        <button id="stop-reminders-btn" type="button">Stop Reminder</button>
+                        <button id="stop-reminders-btn" type="button">Stop Reminders</button>
                     </form>
                 </section>
             </div>
